attempt to fix word break wrapping on maker cards.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -897,6 +897,8 @@ section.member-menu {
           font-size: 10px;
           text-transform: uppercase;
           font-weight: bold;
+          word-break: keep-all;
+          white-space: pre-wrap; 
         }
       }
     }
